Arrumando links da barra de navegação

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -64,10 +64,10 @@
     
     <nav>
                 <ul>
-                  <li><a href="index.html">Home</a></li>
+                  <li><a href="{% url 'index' %}">Home</a></li>
                   <li><a href="#team">Trabalho</a></li>
-                  <li><a href="leitor.html">Leitor</a></li>
-                  <li><a href="login.html">Login</a></li>
+                  <li><a href="{% url 'leitor' %}">Leitor</a></li>
+                  <li><a href="{% url 'login' %}">Login</a></li>
                 </ul>
             </nav>
     </header>
